--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,22 @@
 # Travis CI settings
 
 language: python
+
 python:
-  - "3.4"
-# command to install dependencies
+  - '3.4'
+
+env:
+  matrix:
+    - DB=sqlite DJANGO_VERSION=1.8.2
+
 install:
-  - "pip install -r requirements.txt"
-# command to run tests
+  - pip install -r requirements.txt
+
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
+  - python manage.py runserver &
+  - sleep 3
+
 script: paver
