--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+Django==1.8.2
+Paver==1.2.4
 astroid==1.3.6
 behave==1.2.5
+behave-django==0.2.0
+colorama==0.3.3
 coverage==3.7.1
-Django==1.8.2
 logilab-common==0.63.2
 nose==1.3.7
 parse==1.6.6
 parse-type==0.3.4
-Paver==1.2.4
 pylint==1.4.3
 selenium==2.46.0
 six==1.9.0
+virtualenv==13.0.3
+virtualenvwrapper-win==1.2.1
