--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3
+  - python manage.py migrate
+  - sleep 3
   - python manage.py runserver &
   - sleep 3
 
