--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
-Django==1.8.2
-Paver==1.2.4
+alabaster==0.7.6
 astroid==1.3.6
+Babel==1.3
 behave==1.2.5
 behave-django==0.2.0
 colorama==0.3.3
 coverage==3.7.1
+Django==1.8.2
+docutils==0.12
+Jinja2==2.7.3
 logilab-common==0.63.2
+MarkupSafe==0.23
 nose==1.3.7
 parse==1.6.6
 parse-type==0.3.4
+Paver==1.2.4
+Pygments==2.0.2
 pylint==1.4.3
+pytz==2015.4
 selenium==2.46.0
 six==1.9.0
+snowballstemmer==1.2.0
+Sphinx==1.3.1
+sphinx-rtd-theme==0.1.8
 virtualenv==13.0.3
 virtualenvwrapper-win==1.2.1
+wheel==0.24.0
