--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
 astroid==1.3.6
-behave==1.2.5
-behave-django==0.2.1
 colorama==0.3.3
 coverage==3.7.1
 Django==1.8.2
+extras==0.0.3
+fuzzywuzzy==0.5.0
+linecache2==1.0.0
 logilab-common==1.0.1
+mock==1.0.1
 nose==1.3.7
 parse==1.6.6
 parse-type==0.3.4
 Paver==1.2.4
+pbr==1.2.0
 pylint==1.4.4
+python-mimeparse==0.1.4
+python-subunit==1.1.0
 selenium==2.46.0
 six==1.9.0
+sure==1.2.12
+testtools==1.8.0
+traceback2==1.4.0
+unittest2==1.1.0
 virtualenv==13.1.0
 virtualenvwrapper-win==1.2.1
