--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 astroid==1.3.6
 Django==1.8.3
+ecdsa==0.13
+Fabric==1.10.2
 gunicorn==19.3.0
 logilab-common==1.0.2
+paramiko==1.15.2
 Paver==1.2.4
+pycrypto==2.6.1
 pylint==1.4.4
 selenium==2.46.0
 six==1.9.0
