--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -8,4 +8,8 @@ respawn
 setuid pavel
 chdir /home/pavel/sites/SITENAME
 
-exec /home/pavel/.virtualenvs/SITENAME/bin/gunicorn --bind unix:/tmp/SITENAME.socket superlists.wsgi:application
+exec /home/pavel/.virtualenvs/SITENAME/bin/gunicorn \
+    --bind unix:/tmp/SITENAME.socket \
+    --access-logfile access.log \
+    --error-logfile error.log \
+    superlists.wsgi:application
