--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ before_script:
 script:
   - paver
   - phantomjs node_modules/qunit-phantomjs-runner/runner.js lists/static/tests/tests.html
-  - phantomjs node_modules/quint-phantomjs-runner/runner.js accounts/static/tests/tests.htnl
+  - phantomjs node_modules/quint-phantomjs-runner/runner.js accounts/static/tests/tests.html
